--- a/midterm/21011801_TranKy.ipynb
+++ b/midterm/21011801_TranKy.ipynb
@@ -7,8 +7,121 @@
    "outputs": [],
    "source": [
     "import cv2\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "\n",
+    "def compute_gradient_roberts(image_path):\n",
+    "    image = cv2.imread(image_path)\n",
+    "    if image is None:\n",
+    "        raise FileNotFoundError(f\"Không tìm thấy ảnh tại đường dẫn: {image_path}\")\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    kernel_roberts_x = np.array([[1, 0],\n",
+    "                                 [0, -1]], dtype=np.float32)\n",
+    "    kernel_roberts_y = np.array([[0, 1],\n",
+    "                                 [-1, 0]], dtype=np.float32)\n",
+    "    \n",
+    "    grad_x = cv2.filter2D(gray, cv2.CV_64F, kernel_roberts_x)\n",
+    "    grad_y = cv2.filter2D(gray, cv2.CV_64F, kernel_roberts_y)\n",
+    "    \n",
+    "    gradient = cv2.magnitude(grad_x, grad_y)\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.title('Ảnh gốc')\n",
+    "    plt.imshow(gray, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.title('Gradient Roberts')\n",
+    "    plt.imshow(gradient, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
+    "def compute_gradient_sobel(image_path):\n",
+    "    image = cv2.imread(image_path)\n",
+    "    if image is None:\n",
+    "        raise FileNotFoundError(f\"Không tìm thấy ảnh tại đường dẫn: {image_path}\")\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    grad_x = cv2.Sobel(gray, cv2.CV_64F, 1, 0, ksize=3)\n",
+    "    grad_y = cv2.Sobel(gray, cv2.CV_64F, 0, 1, ksize=3)\n",
+    "    \n",
+    "    gradient = cv2.magnitude(grad_x, grad_y)\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.title('Ảnh gốc')\n",
+    "    plt.imshow(gray, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.title('Gradient Sobel')\n",
+    "    plt.imshow(gradient, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
+    "def compute_gradient_prewitt(image_path):\n",
+    "    image = cv2.imread(image_path)\n",
+    "    if image is None:\n",
+    "        raise FileNotFoundError(f\"Không tìm thấy ảnh tại đường dẫn: {image_path}\")\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    kernel_prewitt_x = np.array([[ -1, 0, 1],\n",
+    "                                 [ -1, 0, 1],\n",
+    "                                 [ -1, 0, 1]], dtype=np.float32)\n",
+    "    kernel_prewitt_y = np.array([[ 1,  1,  1],\n",
+    "                                 [ 0,  0,  0],\n",
+    "                                 [-1, -1, -1]], dtype=np.float32)\n",
+    "    \n",
+    "    grad_x = cv2.filter2D(gray, cv2.CV_64F, kernel_prewitt_x)\n",
+    "    grad_y = cv2.filter2D(gray, cv2.CV_64F, kernel_prewitt_y)\n",
+    "    \n",
+    "    gradient = cv2.magnitude(grad_x, grad_y)\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.title('Ảnh gốc')\n",
+    "    plt.imshow(gray, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.title('Gradient Prewitt')\n",
+    "    plt.imshow(gradient, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
+    "def compute_gradient_laplace(image_path):\n",
+    "    image = cv2.imread(image_path)\n",
+    "    if image is None:\n",
+    "        raise FileNotFoundError(f\"Không tìm thấy ảnh tại đường dẫn: {image_path}\")\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    grad = cv2.Laplacian(gray, cv2.CV_64F)\n",
+    "    \n",
+    "    gradient = np.absolute(grad)\n",
+    "    gradient = np.uint8(gradient)\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.title('Ảnh gốc')\n",
+    "    plt.imshow(gray, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.title('Gradient Laplace')\n",
+    "    plt.imshow(gradient, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.show()\n",
+    "image_path = 'download.png'\n",
+    "compute_gradient_roberts(image_path)\n",
+    "compute_gradient_sobel(image_path)\n",
+    "compute_gradient_prewitt(image_path)\n",
+    "compute_gradient_laplace(image_path)\n"
    ]
   },
   {
@@ -16,7 +129,58 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def sharpen_roberts(image_path, alpha=1.0):\n",
+    "    # Đọc ảnh màu và chuyển sang ảnh xám\n",
+    "    image = cv2.imread(image_path)\n",
+    "    if image is None:\n",
+    "        raise FileNotFoundError(f\"Không tìm thấy ảnh tại đường dẫn: {image_path}\")\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # Định nghĩa kernel Roberts\n",
+    "    kernel_roberts_x = np.array([[1, 0],\n",
+    "                                 [0, -1]], dtype=np.float32)\n",
+    "    kernel_roberts_y = np.array([[0, 1],\n",
+    "                                 [-1, 0]], dtype=np.float32)\n",
+    "    \n",
+    "    # Áp dụng bộ lọc Roberts\n",
+    "    grad_x = cv2.filter2D(gray, cv2.CV_64F, kernel_roberts_x)\n",
+    "    grad_y = cv2.filter2D(gray, cv2.CV_64F, kernel_roberts_y)\n",
+    "    \n",
+    "    # Tính cường độ gradient\n",
+    "    gradient = cv2.magnitude(grad_x, grad_y)\n",
+    "    gradient = np.uint8(np.clip(gradient, 0, 255))\n",
+    "    \n",
+    "    # Làm sắc nét ảnh bằng cách thêm gradient vào ảnh gốc\n",
+    "    sharpened = cv2.addWeighted(gray, 1.0, gradient, alpha, 0)\n",
+    "    \n",
+    "    # Hiển thị kết quả\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    \n",
+    "    plt.subplot(1, 3, 1)\n",
+    "    plt.title('Ảnh gốc')\n",
+    "    plt.imshow(gray, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.subplot(1, 3, 2)\n",
+    "    plt.title('Gradient Roberts')\n",
+    "    plt.imshow(gradient, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.subplot(1, 3, 3)\n",
+    "    plt.title('Ảnh Sắc Nét Roberts')\n",
+    "    plt.imshow(sharpened, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
+    "# Sử dụng hàm với ảnh thẻ sinh viên\n",
+    "sharpen_roberts('student_id_photo.jpg', alpha=1.0)\n"
+   ]
   }
  ],
  "metadata": {
@@ -26,8 +190,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.12"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.undefined.undefined"
   }
  },
  "nbformat": 4,
